[gd_scene load_steps=3 format=3 uid="uid://c03mkkbkoy4sh"]

[ext_resource type="Theme" uid="uid://dy4doi4lyieg0" path="res://resources/ui_theme.tres" id="1_augpk"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_ck6uf"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_augpk")
script = ExtResource("1_ck6uf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.35612
anchor_right = 0.65
anchor_bottom = 0.64388
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_augpk")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_augpk")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="ResetButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
